--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <title>SamBot</title>
+    <title>Certora Bot</title>
     <style>
         body {
             background-color: #1E1E1E;
@@ -162,7 +162,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>SamBot</h1>
+    <h1>Certora Bot</h1>
     <div class="conversation-wrapper">
         <div id="conversation-container"></div>
     </div>
